Fully fixed isotope grid layout issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,9 @@ body {
     padding: 0;
     background-color: #f4e3f8;
 }
+.hidden {
+    display: none;
+}
 .bold {
     font-weight: bold;
 }
@@ -87,6 +90,7 @@ body {
 }
 .load-more-btn {
     cursor: pointer;
+    position: relative;
     margin: 1em auto;
     width: 10em;
     height: 2.5em;
@@ -98,6 +102,10 @@ body {
     background-color: #2dd187;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
     border-radius: .1em;
+}
+.load-more-btn:active {
+    bottom: -.2em;
+    box-shadow: inset 0 0 0 1px #27496d, inset 0 5px 30px #193047 !important;
 }
 /* Breakpoints */
 @media (min-width: 700px) {
